--- a/bmi-calculator/package.json
+++ b/bmi-calculator/package.json
@@ -7,13 +7,20 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "ts-node": "ts-node",
     "CalculateBmi": "npm run ts-node -- bmiCalculator",
-    "CalculateExercises": "npm run ts-node -- exerciseCalculator.ts"
+    "CalculateExercises": "npm run ts-node -- exerciseCalculator.ts",
+    "start": "ts-node index.ts",
+    "dev": "ts-node-dev index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "ts-node-dev": "^2.0.0"
   }
 }
